<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:id="@+id/main"
    style="@style/MainLinear"
    tools:context=".ui.main.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height_56dp"
        android:layout_marginHorizontal="@dimen/default_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="2dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/strong_text_size" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            style="@style/MainButton"
            android:layout_weight="1"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/library"
            style="@style/MainButton"
            android:layout_weight="1"
            android:text="@string/library"
            app:icon="@drawable/library" />

        <Button
            android:id="@+id/settings"
            style="@style/MainButton"
            android:layout_weight="1"
            android:text="@string/settings"
            app:icon="@drawable/settings" />
    </LinearLayout>
</LinearLayout>
