<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/coverTrack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/backBtn" />

        <TextView
            android:id="@+id/trackName"
            style="@style/PlayerTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="22sp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/coverTrack"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistName"
            style="@style/PlayerTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            tools:text="The Beatles" />

        <!-- Цепь кнопок -->
        <ImageButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@null"
            android:src="@drawable/add_button"
            app:layout_constraintEnd_toStartOf="@id/playBtn"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:src="@drawable/play_button"
            app:layout_constraintEnd_toStartOf="@id/favoriteBtn"
            app:layout_constraintStart_toEndOf="@id/addBtn"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/favoriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@null"
            android:src="@drawable/favorite_button"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/playBtn"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <TextView
            android:id="@+id/trackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="00:00"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playBtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/Duration"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackTime" />

        <TextView
            android:id="@+id/trackDuration"
            style="@style/PlayerTrackInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackTime"
            tools:text="5:35" />

        <TextView
            android:id="@+id/albumTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/Album"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackDuration" />

        <TextView
            android:id="@+id/trackAlbum"
            style="@style/PlayerTrackInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginTop="9dp"
            app:layout_constraintWidth_max="300dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackDuration"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/Year"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackAlbum" />

        <TextView
            android:id="@+id/trackYear"
            style="@style/PlayerTrackInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackAlbum"
            tools:text="2009" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/Genre"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackYear" />

        <TextView
            android:id="@+id/trackGenre"
            style="@style/PlayerTrackInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackYear"
            tools:text="Rock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/Country"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackGenre" />

        <TextView
            android:id="@+id/trackCountry"
            style="@style/PlayerTrackInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackGenre"
            tools:text="Великобритания" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="trackAlbum, albumTxt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>